# PrintPulse

./: .gitignore  CLAUDE.md  README.md  StartThermalNewsWatcher.cmd  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml
docs/: cloudflare-tunnel.md
pi/: README.md  appliance.py  printpulse-tunnel.service  printpulse-web.service  printpulse.service  setup-cloudflare-tunnel.sh  setup.sh  wifi_provision.py
pi/webapp/: server.py  wifi_routes.py
pi/webapp/templates/: history.html  index.html  login.html  update_log.html  wifi_setup.html
printpulse/: __init__.py  __main__.py  app.py  ascii_art.py  config.py  illustrations.py  journal.py  letter.py  logging_config.py  ornaments.py  pi_launcher.py  plotter.py  secure_fs.py  speech.py  stationery.py  text_sanitize.py  text_to_svg.py  thermal.py  ui.py  watch.py
printpulse/stationery/: default.json  victorian.json
tests/: test_appliance.py  test_config.py  test_imports.py  test_lazy_imports.py  test_letter.py  test_logging_config.py  test_secure_fs.py  test_server.py  test_text_sanitize.py  test_thermal.py  test_validation.py  test_version.py  test_watch.py  test_wifi_provision.py
